fixed vertical align

--- a/src/app/pages/auth/auth.component.scss
+++ b/src/app/pages/auth/auth.component.scss
@@ -29,7 +29,7 @@
     }
 
     &__nav {
-        margin-top: 14%;
+        margin-top: 15%;
     }
 
     &__google-btn {
