--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,3 @@ a {
 @import 'assets/styles/dialog';
 @import 'assets/styles/icon-buttons';
 @import 'assets/styles/spinner';
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
